fixed the gap spacing between the first logo Letter and second Logo letter

--- a/src/app.css
+++ b/src/app.css
@@ -94,17 +94,24 @@
 
 	.logo *:not([aria-hidden='true']) {
 		@apply inline-block
-		tracking-[clamp(0rem,_calc(-0.07rem_+_0.36vw),_0.5rem)]
+		tracking-[clamp(0.15rem,_calc(-0.07rem_+_0.36vw),_0.5rem)]
 		px-[0.05rem]
 		outline-[0.1px]
 		outline
 		shadow-logo
 		transition-transform
-		duration-200
-		hover:uppercase
-		hover:-translate-y-5
-		hover:scale-[2]
-		hover:rotate-[20deg];
+		duration-200;
+	}
+
+	.logo *:not([aria-hidden='true']):hover {
+		@apply uppercase
+		-translate-y-5
+		scale-[2]
+		rotate-[20deg];
+	}
+
+	.logo > span :nth-child(1) {
+		@apply ml-[0.1rem];
 	}
 
 	/* 
